--- a/.github/workflows/deploy_partyhub.yml
+++ b/.github/workflows/deploy_partyhub.yml
@@ -17,22 +17,29 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Navigate to project directory
+        working-directory: ./PartyHub_Project
+        run: echo "In project directory: $(pwd)"
+
       - name: Set up Python version
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
 
       - name: Create and start virtual environment
+        working-directory: ./PartyHub_Project
         run: |
           python -m venv venv
           source venv/bin/activate
       
       - name: Install dependencies
+        working-directory: ./PartyHub_Project
         run: pip install -r requirements.txt
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
       - name: Zip artifact for deployment
+        working-directory: ./PartyHub_Project
         run: zip release.zip ./* -r
 
       - name: Upload artifact for deployment jobs
@@ -40,7 +47,7 @@ jobs:
         with:
           name: python-app
           path: |
-            release.zip
+            ./PartyHub_Project/release.zip
             !venv/
 
   deploy:
@@ -59,7 +66,7 @@ jobs:
           name: python-app
 
       - name: Unzip artifact for deployment
-        run: unzip release.zip
+        run: unzip ./PartyHub_Project/release.zip
 
       
       - name: Login to Azure
