--- a/.github/workflows/deploy_partyhub.yml
+++ b/.github/workflows/deploy_partyhub.yml
@@ -66,7 +66,7 @@ jobs:
           name: python-app
 
       - name: Unzip artifact for deployment
-        run: unzip ./PartyHub_Project/release.zip
+        run: unzip release.zip
 
       
       - name: Login to Azure
